# Bracket-Analyazer

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  analyzer.cpp  analyzer.h  bracketTest.cpp  builder.cpp  builder.h  main.cpp  round.cpp  source.txt  square.h  task2.cpp  task2.h
include/: bracket.h  builder.h  curly.h  round.h  task2.h  triangular.h
src/: analyzer.cpp  bracket.cpp  curly.cpp  square.cpp  task2.cpp  triangular.cpp
tests/: bracketTest.cpp
